add tenants update endpoint
