# swagger/tenants.json
@@ -99,6 +99,40 @@
                     "description": "swagger test"
                 }
             },
+            "TenantUpdateRequest": {
+                "type": "object",
+                "properties": {
+                    "tenant_id": {
+                        "type": "string",
+                        "readOnly": true,
+                        "format": "uuid"
+                    },
+                    "name": {
+                        "type": "string",
+                        "readOnly": true
+                    },
+                    "slug": {
+                        "type": "string",
+                        "readOnly": true
+                    },
+                    "description": {
+                        "type": "string",
+                        "readOnly": true
+                    }
+                },
+                "required": [
+                    "tenant_id",
+                    "name",
+                    "slug",
+                    "description"
+                ],
+                "example": {
+                    "tenant_id": "f7dfed28-ebaa-4bc3-b556-b1787c74e554",
+                    "name": "swagger test update",
+                    "slug": "swagger",
+                    "description": "swagger test update"
+                }
+            },
             "TenantSetActiveRequest": {
                 "type": "object",
                 "properties": {
@@ -232,6 +266,46 @@
                 "responses": {
                     "200": {
                         "description": "successfully created tenant record",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/apiResponse"
+                                }
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "add tenant failed",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/apiResponse"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/tenants/update": {
+            "summary": "update tenant record",
+            "post": {
+                "summary": "POST method",
+                "tags": ["tenants"],
+                "operationId": "tenant_update",
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/TenantUpdateRequest"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "successfully updated tenant record",
                         "content": {
                             "application/json": {
                                 "schema": {
